--- a/report.html
+++ b/report.html
@@ -11900,7 +11900,7 @@ div#notebook {
 <p><strong>回答：</strong></p>
 <p>在模拟过程中，智能出租车移动了</p>
 <p>驾驶代理程序获得的奖励是2.92</p>
-<p>当红灯时，没有take actioin，会增加奖励；当红灯时，take actioin，会减少奖励；当绿灯直行时，没有take actioin，会减少奖励；当绿灯直行时，take actioin，会增加奖励</p>
+<p>智能车的action一直都是None，当红灯时，智能车会受到奖励；当绿灯直行时，智能车会受到惩罚</p>
 
 </div>
 </div>
@@ -13065,8 +13065,10 @@ quT/A24Ah/QTx3cWAAAAAElFTkSuQmCC
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>答案：</strong></p>
 <p>Relative Frequency of Bad Action图表结果显示驾驶代理程序频繁的做出了不良决策的概率大于40%，其中有大约5%是一些重大事故，大约3%左右是一些小的事故，同时也发生了一些违反交通规则的事情，有超过20%造成了major violation</p>
+<p>假定代理程序是随机驾驶，那么可靠率是合理的</p>
 <p>Reward per Action图表结果显示驾驶代理程序给出的决策获得的奖励是负值，表明它受到了严重的惩罚</p>
 <p>Rate of Reliability图表结果显示可靠性小于40%，而且随着试验次数增加，结果输出没有重大变化</p>
+<p>这个智能出租车对于乘客来说，不会被人为是安全的且/或可靠的，因为从Relative Frequency of Bad Action图表结果和Rate of Reliability图表结果可以看到不良决策的概率在40%左右，可靠性却低于40%</p>
 
 </div>
 </div>
@@ -13116,8 +13118,8 @@ quT/A24Ah/QTx3cWAAAAAElFTkSuQmCC
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>回答：</strong></p>
 <p>'waypoint'对学习的效率相关性比较高，因为这个特征描述的是智能车要到达目的地应该行驶的方向，这个特征值会影响智能车行驶方向的选择，从而影响小车能够准时的到达目的地",</p>
-<p>'inputs'对学习安全性的相关性最高，因为这些特征描述了需要学习的环境中的交通情况，根据交通情况的描述来选择最安全的ation</p>
-<p>'deadline'其实是一种不稳定的特征，比如：在某个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，没有办法在规定的时间内到达目的地。但是在另外一个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内无法到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，但也是可以在规定的时间内到达目的地的。所以这个特征不是一个可以拿来对智能车建模的。</p>
+<p>'inputs'对学习安全性的相关性最高，因为这些特征描述了需要学习的环境中的交通情况，比如交通灯是red or green，左侧车辆的是forward, left or right，右侧车辆是forward, left or right，以及交叉方向的车辆目的方向，根据这些交通情况的描述来选择最安全的ation</p>
+<p>'deadline'其实是一种不稳定的特征，比如：在某个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，没有办法在规定的时间内到达目的地。但是在另外一个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内无法到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，但也是可以在规定的时间内到达目的地的。所以这个特征不具有一般性，会影响智能车的训练的准确性。同时deadline会使状态空间变得很大，这个取决于智能车的起始位置，最坏的情况是智能车的起始位置选择在距离目的地最远的地方。</p>
 
 </div>
 </div>
@@ -17294,9 +17296,9 @@ RERERERDUmBFREREREQ0JAVWREREREREQ/4LFGf8tsBGVD8AAAAASUVORK5CYII=
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>回答：</strong></p>
-<p>使用了上面给出的第一个衰减函数</p>
-<p>在测试之前驾驶代理大约需要做20次训练试验</p>
-<p>tolerance的值是0.21，结合第一个衰减函数，训练次数就可以超过1500次；alpha是0.5，这样控制智能车的决策一半是来自经验，一半是来自最新的学习</p>
+<p>使用了上面给出的第一个衰减函数，因为这个指数函数可以减缓探索因子的衰减过程，要达到探索因子的最小值，就需要 &gt;1500的训练</p>
+<p>从展示结果可以看出，在测试之前驾驶代理大约需要做1400+次训练试验</p>
+<p>tolerance的初始值是0.05，这个值表示了epsilon的最小值，修改后tolerance的值是0.21，结合第一个衰减函数，训练次数就可以超过1500次；alpha是0.5，这样控制智能车的决策一半是来自经验，一半是来自最新的学习.</p>
 <p>与之前的默认Q-Learning学习器相比，这个Q-Learning学习器在经过1500多次的训练之后，Frequency of Bad Action降到了10%左右，safety rate达到了A+；Rate of Reliability基本达到了100%，Reliability Rating达到了A</p>
 <p>我认为Q-Learning学习器的结果表明了你的驾驶代理程序成功地学习了一个合适的策略</p>
 <p>满意</p>
